feat(gitignore): CHange gitignore to develop custom_components

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-/config
+# Ignore everything:
+/config/*
+# Except for wordpress themes:
+!/config/custom_components
 config2/*
 
 tests/testing_config/deps
